--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
     <div class="container mx-auto py-8">
         <div class="flex justify-between items-center">
             <div class="space-y-4 text-3xl h-max shadow-2xl rounded-lg font-bold text-yellow-400 hover:bg-gray-700">
-                <a href="https://github.com/Jisin0/TGMessageStore" target="_blank">
+                <a href="https://github.com/GamerBhai02/TGMessageStore" target="_blank">
                 <span>TGMessageStore</span>
                 </a>
             </div>
@@ -222,7 +222,7 @@
             let currentUrl = window.location.origin;
             // Use default url if null
             if (currentUrl == 'null') {
-                currentUrl = 'https://tg-message-store.vercel.app';
+                currentUrl = 'https://all-movies-link-store.vercel.app';
             }
 
             try {
